<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicPad</string>
    <string name="action_settings">Settings</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="continue_button">Continue</string>

    <!-- Main Activity -->
    <string name="main_recentHeading">Recent Notes:</string>
    <string name="main_newDesc">New Note</string>
    <string name="main_newPhotoDesc">New Photo Note</string>
    <string name="main_searchDesc">Search</string>
    <string name="main_settingsDesc">Settings</string>

    <!-- Sync Settings Activity -->
    <string name="title_activity_sync">Sync Settings</string>
    <string name="sync_usernameLabel">Email Address:</string>
    <string name="sync_passwordLabel">Password:</string>
    <string name="sync_optionsLabel">Sync:</string>
    <string name="sync_deviceNameLabel">Device Name:</string>
    <string name="sync_radioPhotosLabel">Text and Photos:</string>
    <string name="sync_textOnlyLabel">Text Only:</string>
    <string name="sync_checkLabel">Notes will be synced in plain text</string>
    <string name="sync_checkAgreeLabel">I understand</string>
    <string name="required">*Required</string>

    <!-- Edit Activity -->
    <string name="title_activity_edit">Edit Note</string>
    <string name="edit_titleHint">Enter Title Here</string>
    <string name="edit_bodyHint">Note Body. Enter the text for your note here.</string>
    <string name="edit_titleLabel">Title:</string>
    <string name="edit_done">Save and close</string>

    <!-- New Photo Activity -->
    <string name="title_activity_photo">Photo</string>
    <string name="photo_capture">Capture</string>

    <!-- Search Activity -->
    <string name="title_activity_search">Search</string>
    <string name="search_searchHint">Type to Search</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Help Activity -->
    <string name="title_activity_help">Help</string>
    <string name="help_newNote">New Note</string>
    <string name="help_newPhoto">New Photo Note</string>
    <string name="help_search">Search</string>
    <string name="help_check">Save Note and return to Home screen</string>
    <string name="help_showAtStartLabel">Show Help at Startup</string>
    <string name="help_menu">Press your phone\'s menu button for more options.</string>
    <string name="help_fromSettings">This help screen can also be viewed from the settings screen.</string>
    
    <!-- Font Activity -->
	<string name="title_activity_font">Font Settings</string>
	<string name="font_facePrompt">Font Face:</string>
	<string name="font_colorPrompt">Font Color:</string>
	<string name="font_sizePrompt">Font Size:</string>
	
	<string-array name="font_faceArray">
	    <item>Verdana</item>
	    <item>Georgia</item>
	    <item>et Cetera</item>
	</string-array>
	
	<string-array name="font_colorArray">
	    <item>Black</item>
	   	<item>et Cetera</item>
	</string-array>
	
	<string-array name="font_sizeArray">
	    <item>Small</item>
	    <item>Default</item>
	    <item>Large</item>
	</string-array>
	
	<!-- base_menu -->
	<string name="baseMenu_home">Home</string>
	<string name="baseMenu_settings">Settings</string>
	<string name="baseMenu_new">New</string>
	<string name="baseMenu_newPhoto">New Photo</string>
	
	<!-- edit menu -->
	<string name="editMenu_save">Save</string>
	<string name="editMenu_delete">Delete</string>
	
	
</resources>