<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SyncActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_usernameLabel" 
	        />
	    
	    <EditText 
	        android:id="@+id/sync_email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_passwordLabel" 
	        />
	    
	    <EditText 
	        android:id="@+id/sync_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_deviceNameLabel" 
	        />
	    
	    <EditText 
	        android:id="@+id/sync_deviceName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_optionsLabel" 
	        />
	    
	    <TextView
	        android:id="@+id/sync_errorOptions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/required"
	        android:textColor="@color/error"
	        android:visibility="invisible"
	        />
	    
	    <RadioGroup 
	        android:id="@+id/sync_options"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        >
	        
	        <RadioButton 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/sync_radioPhotosLabel"
	            />
	        
	        <RadioButton 
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/sync_textOnlyLabel"
	        	/>
	        
	    </RadioGroup>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_checkLabel" 
	        />
	    
	    <TextView
	        android:id="@+id/sync_errorCheckPlainText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/required"
	        android:textColor="@color/error"
	        android:visibility="invisible"
	        />
	    
	    <CheckBox 
	        android:id="@+id/sync_checkPlainText"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync_checkAgreeLabel"
	        />
	    
	    <Button 
	        android:id="@+id/sync_submitButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit"
	        />
	</LinearLayout>
</ScrollView>