<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FontActivity" 
    android:orientation="vertical"
    style="@style/activity_dark"
    >
    
    <TextView 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/font_facePrompt"
	    style="@style/text_dark"
        />
    
	<Spinner 
	    android:id="@+id/font_face"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:prompt="@string/font_facePrompt"
	    />
	
    <TextView 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/font_colorPrompt"
	    style="@style/text_dark"
        />
	
	<Spinner 
	    android:id="@+id/font_color"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:prompt="@string/font_colorPrompt"
	    />
	
	
    <TextView 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/font_sizePrompt"
	    style="@style/text_dark"
        />
	
	<Spinner 
	    android:id="@+id/font_size"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:prompt="@string/font_sizePrompt"
	    />
	
	<Button 
	    android:id="@+id/font_contButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/continue_button"
	    />
</LinearLayout>